feat(App.js): change style button sayHello

--- a/ex1/src/css/style.css
+++ b/ex1/src/css/style.css
@@ -70,4 +70,12 @@
 .Tomek-link:hover {
   color: #61dafb;
 }
+
+button {
+  background-color: #fff;
+  font-size: 2rem;
+  font-weight: 700;
+  padding: 10px;
+  margin-bottom: 15px;
+}
 /*# sourceMappingURL=style.css.map */
