--- a/ex1/src/scss/style.scss
+++ b/ex1/src/scss/style.scss
@@ -48,3 +48,11 @@
 		color: #61dafb;
 	}
 }
+
+button {
+	background-color: #fff;
+	font-size: 2rem;
+	font-weight: 700;
+	padding: 10px;
+	margin-bottom: 15px;
+}
