--- a/ex1/src/style.css
+++ b/ex1/src/style.css
@@ -55,16 +55,30 @@
           justify-content: flex-start;
 }
 
+.container form .field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
 .container form input {
   font-size: 24px;
   text-align: center;
   padding: 5px;
   letter-spacing: 5px;
   border-radius: 10px;
-}
-
-.container form input:last-of-type {
-  margin-top: 50px;
 }
 
 .container form span {
