fix: LOST APP ;/// - add font awesome and react router

--- a/ex1/src/style.scss
+++ b/ex1/src/style.scss
@@ -13,10 +13,10 @@
 // ~~~~~~ GLOBAL CSS ~~~~~~
 
 .container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	// position: absolute;
+	// top: 50%;
+	// left: 50%;
+	// transform: translate(-50%, -50%);
 	width: 60%;
 	height: 75vh;
 	background-color: #a7a7a7;
