--- a/ex1/src/style.css
+++ b/ex1/src/style.css
@@ -9,10 +9,15 @@
   }
 }
 
+body {
+  height: 100vh;
+}
+
 .container {
-  width: 60%;
-  height: 75vh;
-  background-color: #a7a7a7;
+  width: 100%;
+  height: 100%;
+  max-width: 1800px;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,11 +33,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-radius: 10px;
 }
 
-.container form {
-  width: 80%;
+form {
+  width: 100%;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -48,9 +52,11 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  background-color: #a7a7a7;
 }
 
-.container form .field {
+form .field {
+  margin: 20px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -68,20 +74,20 @@
           flex-grow: 1;
 }
 
-.container form input {
+form input {
   font-size: 24px;
   text-align: center;
-  padding: 5px;
   letter-spacing: 5px;
   border-radius: 10px;
 }
 
-.container form span {
+form span {
   font-size: 18px;
   color: brown;
 }
 
-.container form .btnSubmit {
+form .btnSubmit {
+  margin: 20px auto;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -97,7 +103,7 @@
   border-radius: 10px;
 }
 
-.container form .btnSubmit button {
+form .btnSubmit button {
   width: 100%;
   padding: 15px;
   font-size: 24px;
@@ -106,5 +112,83 @@
   background-color: green;
   cursor: pointer;
   border-radius: 10px;
+}
+
+nav {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+nav .navbar-top {
+  font-size: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px;
+}
+
+nav .navbar-top button {
+  border: none;
+  background-color: #fff;
+  font-size: 60px;
+}
+
+nav .navbar-bottom ul {
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  height: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+nav .navbar-bottom ul.open {
+  height: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+nav .navbar-bottom ul li {
+  margin-bottom: 20px;
+}
+
+nav .navbar-bottom ul li a {
+  text-decoration: none;
+}
+
+@media (min-width: 920px) {
+  .container {
+    width: 1200px;
+    max-width: 1800px;
+    margin: auto;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: stretch;
+        -ms-flex-pack: stretch;
+            justify-content: stretch;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container form {
+    width: 50%;
+    border-radius: 10px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
