--- a/ex1/src/style.scss
+++ b/ex1/src/style.scss
@@ -12,67 +12,132 @@
 
 // ~~~~~~ GLOBAL CSS ~~~~~~
 
+body {
+	height: 100vh;
+}
+
 .container {
-	// position: absolute;
-	// top: 50%;
-	// left: 50%;
-	// transform: translate(-50%, -50%);
-	width: 60%;
-	height: 75vh;
-	background-color: #a7a7a7;
+	width: 100%;
+	height: 100%;
+	max-width: 1800px;
+	margin: auto;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	justify-content: stretch;
 	align-items: center;
-	border-radius: 10px;
+}
 
-	form {
-		width: 80%;
+form {
+	width: 100%;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	background-color: #a7a7a7;
+
+	.field {
+		margin: 20px auto;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		justify-content: center;
 		flex-grow: 1;
+	}
+
+	input {
+		font-size: 24px;
+		text-align: center;
+		// padding: 5px;
+		letter-spacing: 5px;
+		border-radius: 10px;
+	}
+
+	span {
+		font-size: 18px;
+		color: brown;
+	}
+
+	.btnSubmit {
+		// width: 80%;
+		margin: 20px auto;
+		flex-grow: 1;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 10px;
+
+		button {
+			width: 100%;
+			padding: 15px;
+			font-size: 24px;
+			font-weight: 700;
+			letter-spacing: 5px;
+			background-color: green;
+			cursor: pointer;
+			border-radius: 10px;
+		}
+	}
+}
+
+// ~~~~~~ navigation ~~~~~~
+nav {
+	width: 100%;
+	box-sizing: border-box;
+	.navbar-top {
+		font-size: 60px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 15px;
+
+		button {
+			border: none;
+			background-color: #fff;
+			font-size: 60px;
+		}
+	}
+	.navbar-bottom {
+		ul {
+			width: 100%;
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			height: 0;
+			transition: 0.5s;
+
+			&.open {
+				height: 100%;
+				transition: 0.5s;
+			}
+
+			li {
+				margin-bottom: 20px;
+				a {
+					text-decoration: none;
+				}
+			}
+		}
+	}
+}
+
+// ~~!!~~ MEDIA QUERIES ~~!!~~
+@media (min-width: 920px) {
+	.container {
+		width: 1200px;
+		max-width: 1800px;
+		margin: auto;
+		height: 100%;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
-		justify-content: flex-start;
+		justify-content: stretch;
+		align-items: center;
 
-		.field {
-			display: flex;
-			flex-direction: column;
-			flex-wrap: wrap;
-			justify-content: center;
-			flex-grow: 1;
-		}
-
-		input {
-			font-size: 24px;
-			text-align: center;
-			padding: 5px;
-			letter-spacing: 5px;
+		form {
+			width: 50%;
 			border-radius: 10px;
-		}
-
-		span {
-			font-size: 18px;
-			color: brown;
-		}
-
-		.btnSubmit {
-			flex-grow: 1;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			border-radius: 10px;
-
-			button {
-				width: 100%;
-				padding: 15px;
-				font-size: 24px;
-				font-weight: 700;
-				letter-spacing: 5px;
-				background-color: green;
-				cursor: pointer;
-				border-radius: 10px;
-			}
 		}
 	}
 }
