--- a/ex1/src/style.css
+++ b/ex1/src/style.css
@@ -146,14 +146,10 @@ nav .navbar-bottom ul {
   margin: 0;
   padding: 0;
   height: 0;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
 }
 
 nav .navbar-bottom ul.open {
-  height: 100%;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  height: 50%;
 }
 
 nav .navbar-bottom ul li {
@@ -166,7 +162,7 @@ nav .navbar-bottom ul li a {
 
 @media (min-width: 920px) {
   .container {
-    width: 1200px;
+    width: 920px;
     max-width: 1800px;
     margin: auto;
     height: 100%;
@@ -185,6 +181,79 @@ nav .navbar-bottom ul li a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .container nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    padding: 15px;
+  }
+  .container nav .navbar-top {
+    font-size: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 15px;
+  }
+  .container nav .navbar-top button {
+    display: none;
+  }
+  .container nav .navbar-bottom {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  .container nav .navbar-bottom ul {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+  .container nav .navbar-bottom ul li {
+    margin-bottom: 0;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    width: 100%;
+    padding: 20px;
+    border-right: 2px solid black;
+  }
+  .container nav .navbar-bottom ul li:last-of-type {
+    border-right: none;
+  }
+  .container nav .navbar-bottom ul li a {
+    height: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container nav .navbar-bottom ul li a span {
+    font-size: 25px;
   }
   .container form {
     width: 50%;
