--- a/ex1/src/style.css
+++ b/ex1/src/style.css
@@ -173,6 +173,41 @@ nav .navbar-bottom ul.open {
   display: block;
 }
 
+.RickAndMortyContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.RickAndMortyContainer .RickAndMortyCharacter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin-bottom: 30px;
+}
+
+.RickAndMortyContainer .RickAndMortyCharacter h2 {
+  margin-top: 0;
+}
+
 @media (min-width: 920px) {
   .container {
     width: 920px;
@@ -271,6 +306,25 @@ nav .navbar-bottom ul.open {
   .container form {
     width: 50%;
     border-radius: 10px;
+  }
+  .container .RickAndMortyContainer {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .container .RickAndMortyContainer .RickAndMortyCharacter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%;
   }
 }
 /*# sourceMappingURL=style.css.map */
